kubernetes/apps/pihole/pihole-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          image: pihole/pihole:latest
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
          volumeMounts:
            - name: custom-dnsmasq
              mountPath: /etc/dnsmasq.d/02-custom.conf
              subPath: 02-custom.conf
            - name: pihole-data
              mountPath: /etc/pihole
        - name: exporter
          image: ekofr/pihole-exporter:latest
          ports:
            - containerPort: 9617
              name: metrics
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 64Mi
            requests:
              cpu: 10m
              memory: 32Mi
      volumes:
        - name: custom-dnsmasq
          configMap:
            name: pihole-custom-dnsmasq
        - name: pihole-data
          persistentVolumeClaim:
            claimName: pihole-pvc
