kubernetes/apps/pihole/pihole-service-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-metrics
  namespace: pihole
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
    - name: metrics
      port: 9617
      targetPort: 9617
      protocol: TCP
