kubernetes/apps/pihole/httproute-pihole.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  parentRefs:
  - name: cloudflare-tunnel
    namespace: cloudflare-tunnel-system
    sectionName: https
  hostnames:
  - pihole.alialjaffer.com
  rules:
  - backendRefs:
    - name: pihole-web
      port: 80
